--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ secrets.json
 GestionExpedienteElectronico_Linux.zip
 GestionExpedienteElectronico_Mac.zip
 GestionExpedienteElectronico_Windows.zip
+
+# Instrucción para crear el portable
+# pyinstaller --name="GestionExpedienteElectronico" --onefile --windowed --add-data "assets;assets" --add-data "index_generator.py;." --add-data "file_utils.py;." --add-data "excel_handler.py;." app.py
