--- a/.gitignore
+++ b/.gitignore
@@ -67,5 +67,12 @@ GestionExpedienteElectronico_Linux.zip
 GestionExpedienteElectronico_Mac.zip
 GestionExpedienteElectronico_Windows.zip
 
+# Archivos de configuración de PyInstaller
+*.spec
+
+# Archivos Streamlit
+.streamlit/
+secrets.toml
+
 # Instrucción para crear el portable
 # pyinstaller --name="GestionExpedienteElectronico" --onefile --windowed --add-data "assets;assets" --add-data "index_generator.py;." --add-data "file_utils.py;." --add-data "excel_handler.py;." app.py
